# rsomics-sc-embedding-density

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  io.rs  kde.rs  lib.rs
tests/: compat.rs
tests/golden/: density.expected.tsv  density_grouped.expected.tsv  embedding.tsv  embedding_nonfinite.tsv  groups.tsv
