[package]
name = "rsomics-sc-embedding-density"
version = "0.1.1"
description = "Per-group Gaussian-KDE cell density on a 2D embedding, min-max normalized to [0,1] — scanpy tl.embedding_density equivalent, value-exact, rayon-parallel"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-sc-embedding-density"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-sc-embedding-density"
path = "src/main.rs"

[lib]
name = "rsomics_sc_embedding_density"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
